n8n/05-deploy-n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:1.88.0
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
            limits:
              # High memory needed to handle large files
              memory: "4Gi"
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-pvc
