n8n/06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: n8n
  labels:
    service: postgres-n8n
spec:
  selector:
    service: postgres-n8n
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
